<resources>
    <string name="app_name">Presentacion_personal</string>
    <string name="leer">Leer</string>
    <string name="actividad_favorita">Actividad favorita:</string>
    <string name="ticuantepe">Ticuantepe</string>
    <string name="residencia">Residencia:</string>
    <string name="greece_ita_gmail_com">greece.ita@gmail.com</string>
    <string name="correo">Correo:</string>
    <string name="diecinueve_a_os">Diecinueve años</string>
    <string name="edad">Edad:</string>
    <string name="grecia_guzman">Grecia Guzman</string>
    <string name="nombre">Nombre:</string>
    <string name="perfil">Perfil</string>
</resources>
